--- a/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/create.html
+++ b/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/create.html
@@ -20,7 +20,7 @@
     <div class="container mt-4">
         <div class="row w-50 mx-auto">
             <div class="col-lg-12">
-                <h2>Create smartPhone</h2>
+                <h2>Create facility</h2>
                 <div>
                     <p style="color: red" id="pError"></p>
                 </div>
