--- a/Sprint 2/front_end_sprint_2/shop-online/src/index.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
 <!--trang login-->
-  <link rel="stylesheet" href="assets/style.css">
+<!--  <link rel="stylesheet" href="assets/style.css">-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
