--- a/Sprint 2/front_end_sprint_2/shop-online/src/index.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/index.html
@@ -16,7 +16,7 @@
   <meta content="Free HTML Templates" name="description">
 
   <!-- Favicon -->
-  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="src/favicon.ico" rel="icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,7 +35,9 @@
   <!--  PhucLv  thư viện lấy icon-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/brands.min.css">
 
-
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=Ad8wbSbgrHOr0wQv5QdU7ML8lEeJnWVUl7pEy7VGUBn8aCLmSvb8s2cY99JZOCAwMIS-eTJq5-mDLIlj">
+  </script>
 </head>
 <body>
   <app-root></app-root>
