--- a/Sprint 2/front_end_sprint_2/shop-online/src/index.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/index.html
@@ -8,9 +8,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
-<!--teamleat free-->
+<!--&lt;!&ndash;bootstrap 4&ndash;&gt;-->
+<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"-->
+<!--        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">-->
+<!--&lt;!&ndash;teamleat free&ndash;&gt;-->
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Free HTML Templates" name="keywords">
   <meta content="Free HTML Templates" name="description">
@@ -36,12 +37,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/brands.min.css">
 
   <script
-    src="https://www.paypal.com/sdk/js?client-id=Ad8wbSbgrHOr0wQv5QdU7ML8lEeJnWVUl7pEy7VGUBn8aCLmSvb8s2cY99JZOCAwMIS-eTJq5-mDLIlj">
+    src="https://www.paypal.com/sdk/js?client-id=AQyl36PrOrpz-DlXTGFboKv1UxPDvvEAN_CJ7MbRhRZJcszTNRAZicW31qenu8ikM-3DkygrNeTkTxHQ">
   </script>
 </head>
 <body>
   <app-root></app-root>
 </body>
+<!--&lt;!&ndash;bootstrap4&ndash;&gt;-->
+<!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>-->
+
 
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
